Updated indent, eslint, made modular containers

--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,9 @@
     }],
     "react/jsx-no-bind": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": "off"
+    "react/prefer-stateless-function": "off",
+    "arrow-body-style": ["as-needed"],
+    "indent": ["error", 3]
   },
   "plugins": [
     "flowtype",
